crates/sifr_python_parser/tests/snapshots/invalid_syntax@comma_separated_missing_comma.py.snap
---
source: crates/sifr_python_parser/tests/fixtures.rs
input_file: crates/sifr_python_parser/resources/inline/err/comma_separated_missing_comma.py
---
## AST

```
Module(
    ModModule {
        range: 0..15,
        body: [
            Expr(
                StmtExpr {
                    range: 0..14,
                    value: Call(
                        ExprCall {
                            range: 0..14,
                            func: Name(
                                ExprName {
                                    range: 0..4,
                                    id: "call",
                                    ctx: Load,
                                },
                            ),
                            arguments: Arguments {
                                range: 4..14,
                                args: [
                                    NumberLiteral(
                                        ExprNumberLiteral {
                                            range: 12..13,
                                            value: Int(
                                                1,
                                            ),
                                        },
                                    ),
                                ],
                                keywords: [
                                    Keyword {
                                        range: 5..8,
                                        arg: None,
                                        value: Name(
                                            ExprName {
                                                range: 7..8,
                                                id: "x",
                                                ctx: Load,
                                            },
                                        ),
                                    },
                                ],
                            },
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | call(**x := 1)
  |          ^^ Syntax Error: Expected ',', found ':='
  |


  |
1 | call(**x := 1)
  |             ^ Syntax Error: Positional argument cannot follow keyword argument unpacking
  |
