crates/sifr_python_parser/tests/snapshots/invalid_syntax@comma_separated_missing_comma_between_elements.py.snap
---
source: crates/sifr_python_parser/tests/fixtures.rs
input_file: crates/sifr_python_parser/resources/inline/err/comma_separated_missing_comma_between_elements.py
---
## AST

```
Module(
    ModModule {
        range: 0..92,
        body: [
            Expr(
                StmtExpr {
                    range: 83..91,
                    value: List(
                        ExprList {
                            range: 83..91,
                            elts: [
                                NumberLiteral(
                                    ExprNumberLiteral {
                                        range: 84..85,
                                        value: Int(
                                            0,
                                        ),
                                    },
                                ),
                                NumberLiteral(
                                    ExprNumberLiteral {
                                        range: 87..88,
                                        value: Int(
                                            1,
                                        ),
                                    },
                                ),
                                NumberLiteral(
                                    ExprNumberLiteral {
                                        range: 89..90,
                                        value: Int(
                                            2,
                                        ),
                                    },
                                ),
                            ],
                            ctx: Load,
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | # The comma between the first two elements is expected in `parse_list_expression`.
2 | [0, 1 2]
  |       ^ Syntax Error: Expected ',', found int
  |
