crates/sifr_python_parser/tests/snapshots/invalid_syntax@comma_separated_missing_element_between_commas.py.snap
---
source: crates/sifr_python_parser/tests/fixtures.rs
input_file: crates/sifr_python_parser/resources/inline/err/comma_separated_missing_element_between_commas.py
---
## AST

```
Module(
    ModModule {
        range: 0..12,
        body: [
            Expr(
                StmtExpr {
                    range: 0..11,
                    value: List(
                        ExprList {
                            range: 0..11,
                            elts: [
                                NumberLiteral(
                                    ExprNumberLiteral {
                                        range: 1..2,
                                        value: Int(
                                            0,
                                        ),
                                    },
                                ),
                                NumberLiteral(
                                    ExprNumberLiteral {
                                        range: 4..5,
                                        value: Int(
                                            1,
                                        ),
                                    },
                                ),
                                NumberLiteral(
                                    ExprNumberLiteral {
                                        range: 9..10,
                                        value: Int(
                                            2,
                                        ),
                                    },
                                ),
                            ],
                            ctx: Load,
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | [0, 1, , 2]
  |        ^ Syntax Error: Expected an expression or a ']'
  |
