crates/sifr_python_parser/tests/snapshots/invalid_syntax@comma_separated_missing_first_element.py.snap
---
source: crates/sifr_python_parser/tests/fixtures.rs
input_file: crates/sifr_python_parser/resources/inline/err/comma_separated_missing_first_element.py
---
## AST

```
Module(
    ModModule {
        range: 0..10,
        body: [
            Expr(
                StmtExpr {
                    range: 0..9,
                    value: Call(
                        ExprCall {
                            range: 0..9,
                            func: Name(
                                ExprName {
                                    range: 0..4,
                                    id: "call",
                                    ctx: Load,
                                },
                            ),
                            arguments: Arguments {
                                range: 4..9,
                                args: [
                                    NumberLiteral(
                                        ExprNumberLiteral {
                                            range: 7..8,
                                            value: Int(
                                                1,
                                            ),
                                        },
                                    ),
                                ],
                                keywords: [],
                            },
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | call(= 1)
  |      ^ Syntax Error: Expected an expression or a ')'
  |
